# queryforge

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  NEXT_STEPS.md  README.md  queryforge.toml
.github/workflows/: ci.yml
crates/queryforge-build/: Cargo.toml
crates/queryforge-build/src/: lib.rs
crates/queryforge-cli/: Cargo.toml
crates/queryforge-cli/src/: main.rs
examples/basic/: README.md  queryforge.toml  schema.sql
examples/basic/.queryforge/: metadata.json
examples/basic/queries/: users.sql
examples/basic/src/db/: mod.rs  queryforge_metadata.rs  users.rs
examples/build-rs/: Cargo.toml  README.md  build.rs  queryforge.toml
examples/build-rs/queries/: users.sql
examples/build-rs/src/: lib.rs  main.rs
examples/crud/: Cargo.toml  README.md  build.rs  queryforge.toml
examples/crud/queries/: users.sql
examples/crud/src/: main.rs
examples/live-libsql-catalog/: Cargo.toml  README.md  build.rs  queryforge.toml
examples/live-libsql-catalog/queries/: users.sql
examples/live-libsql-catalog/src/: main.rs
examples/postgres-e2e/: Cargo.toml  README.md  build.rs  queryforge.toml  schema.sql
examples/postgres-e2e/queries/: users.sql
examples/postgres-e2e/src/: main.rs
examples/sqlite-e2e/: Cargo.toml  README.md  queryforge.toml  schema.sql
examples/sqlite-e2e/src/: main.rs
examples/type-mapping-profiles/: Cargo.toml  README.md  build.rs
examples/type-mapping-profiles/src/: lib.rs
examples/usage-app/: Cargo.toml  README.md  queryforge.toml  schema.sql
examples/usage-app/queries/: users.sql
examples/usage-app/src/: main.rs
examples/with-config/: Cargo.toml  README.md  queryforge.toml  schema.sql
examples/with-config/queries/: users.sql
examples/with-config/src/: lib.rs  main.rs
src/: config.rs  diagnostics.rs  engine.rs  error.rs  fingerprint.rs  ir.rs  lib.rs  names.rs  nullability.rs  parser.rs  scalar.rs  sql_ir.rs  type_map.rs
src/backends/: libsql.rs  mod.rs  postgres.rs
src/codegen/: libsql_native.rs  mod.rs  sqlx_postgres.rs  sqlx_sqlite.rs  tokio_postgres.rs
src/runtime/: libsql_executor.rs  mod.rs
tests/: libsql_remote_e2e.rs  postgres_e2e.rs
