[package]
name = "queryforge-usage-app"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
queryforge-build = { path = "../../crates/queryforge-build" }

[dependencies]
queryforge = { path = "../.." }

[dev-dependencies]
libsql = { version = "0.10.0-pre.4", default-features = false, features = ["core"] }
queryforge = { path = "../..", features = ["libsql-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
